added picture in line 20

--- a/six.html
+++ b/six.html
@@ -13,8 +13,10 @@
     <br><a href="#section1">Перейти к разделу 1</a> <!-- ссылка на конкретную часть открытой страницы -->
 <h2 id="section1">Раздел 1</h2> <!-- конкретная часть открытой страницы -->
 
-<img src="3D wallpapers 23-22.jpg"> <!-- вставка картинки локально. -->
+<img src="3D wallpapers 23-22.jpg"> <!-- вставка картинки локально. Из рабочей машины-->
 
 <img src="https://www.shutterstock.com/shutterstock/photos/2436709611/display_1500/stock-photo-close-up-image-capturing-the-vibrant-textures-of-a-dalmatian-pelican-s-orange-eye-grey-skin-and-2436709611.jpg"> <!-- Вставка изображений по ссылке из интернета/внешней ссылке -->
+
+<img src="1SuQXYbBn9s.jpg" class="img1">
 </body>
 </html>
